# miniFS

./: .gitignore  README.md
create/: CMakeLists.txt  create.sln
create/create/: CMakeLists.txt  create.vcxproj  main.cpp
miniFS/: CMakeLists.txt  hexdump.py  miniFS.psess  miniFS.sln  miniFS120918.vsp
miniFS/CMake/: Default.cmake  DefaultCXX.cmake  Utils.cmake
miniFS/miniFS/: CMakeLists.txt  main.cpp  miniApp.cpp  miniApp.h  miniBlock.cpp  miniBlock.h  miniCommandExecute.cpp  miniCommandParsing.cpp  miniCommandParsing.h  miniError.cpp  miniError.h  miniFS.vcxproj  miniFS.vcxproj.filters  miniFile.cpp  miniFile.h  util.h
miniFS/miniFS/UnitTest/: block.cpp  dir.cpp  file.cpp
